# openai-agent-sdk-rust

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLANS.md  README.md  SECURITY.md
.claude/agents/: architect.md  docs-writer.md  implementer.md  reviewer.md  tester.md
.claude/skills/code-change-verification/: SKILL.md
.claude/skills/implementation-strategy/: SKILL.md
.claude/skills/openai-knowledge/: SKILL.md
.claude/skills/pr-draft-summary/: SKILL.md
.claude/skills/rust-python-mapping/: SKILL.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: runner.rs
docs/: book.toml
docs/src/: SUMMARY.md  agents.md  config.md  context.md  examples.md  extensions.md  guardrails.md  handoffs.md  human_in_the_loop.md  index.md  mcp.md  models.md  multi_agent.md  quickstart.md  results.md  running_agents.md  sessions.md  streaming.md  tools.md  tracing.md  voice.md
examples/: guardrails.rs  handoffs.rs  hello_world.rs  streaming.rs  tools.rs
src/: agent.rs  computer.rs  config.rs  context.rs  editor.rs  error.rs  global_config.rs  guardrail.rs  items.rs  lib.rs  lifecycle.rs  logger.rs  prompts.rs  repl.rs  result.rs  retry.rs  run_state.rs  runner.rs  schema.rs  stream_events.rs  tool.rs  tool_guardrails.rs  usage.rs  util.rs
src/extensions/: handoff_filters.rs  mod.rs
src/extensions/codex/: codex.rs  codex_tool.rs  events.rs  items.rs  mod.rs  options.rs  thread.rs
src/handoffs/: history.rs  mod.rs
src/mcp/: config.rs  mod.rs  protocol.rs  server.rs  util.rs
src/memory/: compacting.rs  encrypted.rs  in_memory.rs  mod.rs  session.rs  sqlite.rs
src/models/: any_provider.rs  litellm.rs  mod.rs  multi_provider.rs  openai_chatcompletions.rs  openai_responses.rs  reasoning_content_replay.rs
src/run_internal/: mod.rs  run_loop.rs  tool_execution.rs  turn_resolution.rs
src/snapshots/: openai_agents__schema__tests__snapshot_complex_schema.snap
src/tracing_mod/: config.rs  exporter.rs  mod.rs  spans.rs
src/voice/: agent.rs  config.rs  events.rs  items.rs  mod.rs  model.rs  pipeline.rs  result.rs  session.rs  utils.rs  workflow.rs
tests/: agent_workflow.rs  builder_patterns.rs  openai_integration.rs  tool_integration.rs
