[package]
name = "openai-agents"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "OpenAI Agents SDK for Rust — a lightweight, ergonomic framework for building multi-agent workflows"
repository = "https://github.com/bogdan/openai-agents-rs"
documentation = "https://docs.rs/openai-agents"
readme = "README.md"
keywords = ["openai", "agents", "llm", "ai", "multi-agent"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.13.2", features = ["json", "stream"] }

# OpenAI API
async-openai = "0.34.0"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Schema generation (equivalent to pydantic)
schemars = "1.2.1"

# Async trait support
async-trait = "0.1.89"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Tokio stream utilities
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
pretty_assertions = "1"
insta = { version = "1", features = ["json"] }
criterion = { version = "0.5", features = ["async_tokio"] }
wiremock = "0.6"
temp-env = "0.3"

[features]
default = []
mcp = []
voice = []
tracing-otlp = ["tracing-subscriber/registry"]
sqlite-session = []

[[bench]]
name = "runner"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
