[package]
name = "openai-agents"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "OpenAI Agents SDK for Rust — a lightweight, ergonomic framework for building multi-agent workflows"
authors = ["Bogdan Gewald"]
repository = "https://github.com/UltraEmbeddedLab/openai-agent-sdk-rust"
documentation = "https://docs.rs/openai-agents"
readme = "README.md"
keywords = ["openai", "agents", "llm", "ai", "multi-agent"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
# Async runtime
tokio = { version = "1.51.0", features = ["full"] }
futures = "0.3.32"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# HTTP client
reqwest = { version = "0.13.2", features = ["json", "stream"] }

# OpenAI API
async-openai = "0.34.0"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging & tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Schema generation (equivalent to pydantic)
schemars = "1.2.1"

# Async trait support
async-trait = "0.1.89"

# Random number generation (used for retry jitter)
rand = "0.10.0"

# UUID generation
uuid = { version = "1.23.0", features = ["v4"] }

# Tokio stream utilities
tokio-stream = "0.1"

# Async stream generators
async-stream = "0.3"

# WebSocket (optional, for voice feature)
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"], optional = true }

# Base64 encoding/decoding (optional, for voice feature)
base64 = { version = "0.22.1", optional = true }

# SQLite (optional, for sqlite-session feature)
rusqlite = { version = "0.39.0", features = ["bundled"], optional = true }

# OpenTelemetry OTLP export (optional, for tracing-otlp feature)
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.14.0"
pretty_assertions = "1.4.1"
insta = { version = "1.47.2", features = ["json"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }
wiremock = "0.6"
temp-env = "0.3"

[features]
default = []
mcp = []
voice = ["tokio-tungstenite", "base64"]
tracing-otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry", "tracing-subscriber/registry"]
sqlite-session = ["rusqlite"]

[[bench]]
name = "runner"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
